# kronos

./: .gitignore  CMakeLists.txt  README.md
cmake/: AddHDL.cmake  AddHDLCommon.cmake  AddHDLVerilator.cmake  AddRISCV.cmake  AddVUnit.cmake  FindRISCV.cmake  FindSRecord.cmake  FindVUnit.cmake  FindVerilator.cmake  FindYosys.cmake  macros.cmake  vunit_testrunner.py.in
docs/: CNAME  README.md  _sidebar.md  alu_design.md  arch_overview.md  compliance.md  csr.md  dev_env.md  excpt_intr.md  hazard_ctrl.md  index.html  instr_decode.md  instr_execute.md  instr_fetch.md  integration.md  krz_soc.md  ldst_unit.md  riscv_tests.md  rv32_study.md  snowflake.md  write_back.md
impl/: .krz.radiant_template.in.swp  CMakeLists.txt  krz.radiant_template.in  krz_icebreaker.pdc  krzboy.radiant_template.in  krzboy_icebreaker.pdc  sf.radiant_template.in  sf_icebreaker.pdc
riscv-compliance/: CMakeLists.txt  kronos_compliance.cpp  kronos_compliance_top.sv  kronos_compliance_vsim.sv
riscv-tests/: CMakeLists.txt
riscv-tests/common/: crt0.S  link.ld  util.c  util.h
riscv-tests/dhrystone/: dhrystone_main.c
riscv-tests/dhrystone_t/: dhrystone.h  dhrystone_main.c
riscv-tests/towers/: towers_main.c
riscv-tests/vvadd/: vvadd_main.c
rtl/: CMakeLists.txt
rtl/basic/: CMakeLists.txt  pipeline_buffer.sv
rtl/core/: CMakeLists.txt  kronos_EX.sv  kronos_ID.sv  kronos_ID0.sv  kronos_IF.sv  kronos_IF2.sv  kronos_IF_lite.sv  kronos_RF.sv  kronos_WB.sv  kronos_agu.sv  kronos_alu.sv  kronos_branch.sv  kronos_core.sv  kronos_counter64.sv  kronos_csr.sv  kronos_hcu.sv  kronos_lsu.sv  kronos_types.sv
rtl/memory/: CMakeLists.txt  IMEM_model.sv  generic_rom.sv  generic_spram.sv  ice40up_ebr.sv  ice40up_ebr4K.sv  ice40up_memory.sv  ice40up_memory_lite.sv  ice40up_rom.sv  ice40up_sram128K.sv  ice40up_sram64K.sv  spsram32_model.sv
rtl/peripherals/: CMakeLists.txt  fifo.sv  input_debouncer.sv  spi_master.sv  spiflash.sv  uart_tx.sv  wb_spi_master.sv  wb_uart_tx.sv
rtl/platform/: CMakeLists.txt
rtl/platform/icebreaker/: CMakeLists.txt  icebreaker_lite_top.sv  icebreaker_memory.sv  icebreaker_memory_lite.sv  icebreaker_system_bus_lite.sv
rtl/platform/icebreaker_lite/: CMakeLists.txt  icebreaker_7sd_pmod.sv  icebreaker_lite_memory.sv  icebreaker_lite_system_bus.sv  icebreaker_lite_top.sv
rtl/platform/krz/: CMakeLists.txt  krz_debounce.sv  krz_gpreg.sv  krz_intercon.sv  krz_interconn.sv  krz_map.sv  krz_sysbus.sv  krz_top.sv  krz_xbar.sv  krzboy.sv
rtl/platform/snowball/: CMakeLists.txt
rtl/platform/snowflake/: CMakeLists.txt  snowflake_7sd_driver.sv  snowflake_system_bus.sv  snowflake_top.sv
src/: CMakeLists.txt
src/icebreaker_lite/: CMakeLists.txt  blinky.c  link.ld  prime.c
src/krz/: CMakeLists.txt  bootloader.ld  krz_blinky.c  krz_bootloader.c  krz_test_boot.S  link.ld
src/snowflake/: CMakeLists.txt  link.ld  sf_blinky.c  sf_prime.c  start.S
tests/: CMakeLists.txt
tests/compliance/: CMakeLists.txt  kronos_compliance.sv  kronos_compliance_testrunner.py.in
tests/other/: CMakeLists.txt  comp.sv  comp_ut.sv
tests/platform/: CMakeLists.txt  icebreaker_lite_unit_test.sv  krz_blinky_unit_test.sv  krz_boot_unit_test.sv  krz_dhrystone_unit_test.sv  krz_intercon_unit_test.sv  krz_sysbus_unit_test.sv  krz_xbar_unit_test.sv  snowflake_unit_test.sv
tests/platform/src/: CMakeLists.txt  doubler2.c  link.ld  start.S
tests/unit/: CMakeLists.txt  branch_unit_test.sv  core_adv_unit_test.sv  core_basic_unit_test.sv  counters_unit_test.sv  csr_unit_test.sv  debouncer_unit_test.sv  fifo_unit_test.sv  hcu_unit_test.sv  ice40up_memory_unit_test.sv  ice40up_sram_unit_test.sv  icebreaker_memory_unit_test.sv  kronos_EX_branch_unit_test.sv  kronos_EX_unit_test.sv  kronos_ID_unit_test.py  kronos_ID_unit_test.sv  kronos_IF_unit_test.py  kronos_IF_unit_test.sv  kronos_WB_counters_unit_test.sv  kronos_WB_csr_unit_test.sv  kronos_WB_lsu_unit_test.sv  kronos_WB_unit_test.sv  kronos_branch_unit_test.sv  lsu_unit_test.sv  spim_unit_test.sv  uart_tx_unit_test.sv
tests/unit/src/: CMakeLists.txt  doubler.c  fibonnaci.c  link.ld
utils/: bin2mem.py  krzprog.py
